--- a/templates/page.html
+++ b/templates/page.html
@@ -5,6 +5,7 @@
     <link href="assets/bootstrap/css/bootstrap.min.css" rel="stylesheet" media="screen">
     <link href="assets/navbar-with-footer.css" rel="stylesheet" media="screen">
     <link href="assets/oscii.css" rel="stylesheet" media="screen">
+    {{ :styles }}
   </head>
 
   <body>
@@ -32,8 +33,6 @@
       </div>
     </nav>
 
-    <script src="http://code.jquery.com/jquery.js"></script>
-    <script src="assets/bootstrap/js/bootstrap.min.js"></script>
 
     <div class="container">
       <div class="row-fluid">
@@ -43,7 +42,7 @@
       <hr>
 
       <div class="row-fluid">
-        {{ :all }}
+        {{ :content }}
       </div><!--/row-->
     </div><!--/container-->
 
@@ -53,5 +52,8 @@
       </div>
     </footer>
 
+    <script src="http://code.jquery.com/jquery.js"></script>
+    <script src="assets/bootstrap/js/bootstrap.min.js"></script>
+    {{ :dependencies }}
   </body>
 </html>
