--- a/assets/styles/oscii.css
+++ b/assets/styles/oscii.css
@@ -15,6 +15,11 @@ li {
     list-style:none
 }
 
+ul {
+    padding:0;
+    margin:0;
+}
+
 a,a:hover {
     text-decoration:inherit;
     color:inherit;
@@ -62,7 +67,7 @@ header {
     .index-logo img,.page-logo  {
         display:inline-block;
     }
-.index-title,.page-title {
+.index-title,.page-title,.page-content h2 {
     font-size:3em;
     text-transform:uppercase;
     color:#666;
@@ -202,15 +207,13 @@ header {
     background-color:#FFF;
     padding:3em 0 6em 0;
 }
-.team-row {
-    padding:0 20%;
-    margin-top:1.5em;
-}
-.team-person {
+.page-content li {
     width:100%;
     text-align:center;
     line-height:200%;
     font-size:1.1em;
+    width:100%;
+    text-align:center;
 }
     .page-content a {
         border-bottom:1px dotted #666;
@@ -218,12 +221,20 @@ header {
     .page-content a:hover {
         border-bottom:1px solid #666;
     }
-    .team-byline {
+    .page-content p {
         color:#666;
         line-height:150%;
         padding:0 25%;
         text-align:center;
+        width:100%;
     }
+    .page-content h3,.page-content h2 {
+        width:100%;
+        text-align:center;
+    }
+        .page-content h3 {
+            font-family:'Roboto'
+        }
 /* -- page footer -- */
 footer {
     background-color:#333;
