--- a/templates/page.html
+++ b/templates/page.html
@@ -3,13 +3,11 @@
   <head>
     <title>Oscii Lab {{ title }}</title>
     <link href="assets/bootstrap/css/bootstrap.min.css" rel="stylesheet" media="screen">
-    <link href="assets/oscii.css" rel="stylesheet" media="screen">
-    
     <link href="assets/styles/oscii.css" rel="stylesheet">
     {{ :styles }}
   </head>
 
-  <body class="dark blue">
+  <body class="{{ body }}">
     <header>
       <nav class="col-md-6 main-nav">
         <ul>
