--- a/templates/page.html
+++ b/templates/page.html
@@ -4,6 +4,7 @@
     <title>Oscii Lab {{ title }}</title>
     <link href="assets/bootstrap/css/bootstrap.min.css" rel="stylesheet" media="screen">
     <link href="assets/styles/oscii.css" rel="stylesheet">
+    <link rel="stylesheet" href="http://maxcdn.bootstrapcdn.com/font-awesome/4.3.0/css/font-awesome.min.css">
     {{ :styles }}
   </head>
 
