fixes #2 -- chrome compatible: does not allow focus on hidden elements, adds char on keyup not keypress

--- a/templates/page.html
+++ b/templates/page.html
@@ -34,6 +34,7 @@
     </footer>
 
     <script src="http://code.jquery.com/jquery.js"></script>
+    <link href='http://fonts.googleapis.com/css?family=Roboto:400,300,500' rel='stylesheet' type='text/css'>
     {{ :dependencies }}
   </body>
 </html>
